tree-sitter-usfm3/test/corpus/test6_poetry.txt
================================================================================
q#
================================================================================
\id GEN
\c 3
\s1 A Prayer of Habakkuk
\p
\v 1 This is a prayer of the prophet Habakkuk:
\b
\q1
\v 2 O Lord, I have heard of what you have done,
\q2 and I am filled with awe.
\q1 Now do again in our times
\q2 the great deeds you used to do.
\q1 Be merciful, even when you are angry.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (b)
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))))))

================================================================================
qr
================================================================================
\id GEN
\c 136
\s1 God's Love Never Fails
\q1
\v 1 Praise the Lord! He is good.
\qr God's love never fails.
\q1
\v 2 Praise the God of all gods.
\qr God's love never fails.
\q1
\v 3 Praise the Lord of lords.
\qr God's love never fails.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))))
    (poetry
      (qr
        (verseText
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))))
    (poetry
      (qr
        (verseText
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))))
    (poetry
      (qr
        (verseText
          (text))))))

================================================================================
qc
================================================================================
\id GEN
\c 1
\q1
\v 18 Praise the Lord, the God of Israel!
\q1 He alone does these wonderful things.
\q1
\v 19 Praise his glorious name forever!
\q1 May his glory fill the whole world.
\b
\qc Amen! Amen!
\b
\q1
\v 20 This is the end of the prayers of David son of Jesse.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))))
    (poetry
      (qc
        (verseText
          (text))
        (b)))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))))))

================================================================================
qs
================================================================================
\id GEN
\c 3
\s1 Trust in God under Adversity
\d A Psalm of David, when he fled from his son Absalom.
\q1
\v 1 O Lord, how many are my foes!
\q2 Many are rising against me;
\q1
\v 2 many are saying to me,
\q2 “There is no help for you \qs Selah\qs*
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (title
      (d
        (text)))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (qs
            (verseText
              (text))))))))

================================================================================
qa
================================================================================
\id GEN
\c 119
\qa Aleph
\q1
\v 1 Blessed are they whose ways are blameless,
\q2 who walk according to the law of the Lord.
...
\qa Beth
\q1
\v 9 How can a young man keep his way pure?
\q2 By living according to your word.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (qa
        (verseText
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))))
    (title
      (qa
        (verseText
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))))))

================================================================================
qac
================================================================================
\id GEN
\c 1
\s1 Primer lamento acróstico
\s2 El profeta
\q1
\v 1 ¡\qac P\qac*obrecita de ti, Jerusalén!
\q1 Antes eras la más famosa
\q1 de todas las ciudades.
\q1 ¡Antes estabas llena de gente,
\q1 pero te has quedado muy sola,
\q1 te has quedado viuda!
\q1 ¡Fuiste la reina de las naciones,
\q1 pero hoy eres esclava de ellas!
\b
\q1
\v 2 \qac O\qac*lvidada y bañada en lágrimas
\q1 pasas todas las noches.
\q1 Muchos decían que te amaban,
\q1 pero hoy nadie te consuela.
\q1 Los que se decían tus amigos
\q1 hoy son tus enemigos.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text))
          (qac
            (verseText
              (text)))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (qac
            (verseText
              (text)))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))))))

================================================================================
qm
================================================================================
\id GEN
\c 1
\p
\v 18 God's spirit took control of one of them, Amasai, who later became the commander
of “The Thirty,” and he called out,
\qm1 “David son of Jesse, we are yours!
\qm1 Success to you and those who help you!
\qm1 God is on your side.”
\b
\m David welcomed them and made them officers in his army.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (poetry
      (qmBlock
        (qm
          (qmTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (qm
          (qmTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (qm
          (qmTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))))
    (paragraph
      (m
        (verseText
          (text))))))

================================================================================
qd
================================================================================
\id GEN
\c 1
\q1 \v 18 yet I will rejoice in the Lord,
\q2 I will be joyful in God my Savior.
\b
\q1 \v 19 The Sovereign Lord is my strength;
\q2 he makes my feet like the feet of a deer,
\q2 he enables me to tread on the heights.
\b
\qd For the director of music. On my stringed instruments.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))))
    (poetry
      (qd
        (verseText
          (text))))))

================================================================================
b
================================================================================
\id GEN
\c 3
\s1 Morning Prayer for Help
\q1
\v 1 I have so many enemies, Lord,
\q2 so many who turn against me!
\q1
\v 2 They talk about me and say,
\q2 “God will not help him.”
\b
\q1
\v 3 But you, O Lord, are always my shield from danger;
\q2 you give me victory
\q2 and restore my courage.
\q1
\v 4 I call to the Lord for help,
\q2 and from his sacred hill he answers me.
\b
\q1
\v 5 I lie down and sleep,
\q2 and all night long the Lord protects me.
\q1
\v 6 I am not afraid of the thousands of enemies
\q2 who surround me on every side.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text))
          (b))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax3))
          (verseText
            (text)))))))
